--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ website:
   title: "STA 9750 Submission Material"
   description:
     Course Projects for STA 9750 at Baruch College
-  site-url: "https://karenn-dotcom.github.io/STA9750-2025-FALL/mp01"
+  site-url: "https://karenn-dotcom.github.io/STA9750-2025-FALL/"
   navbar:
     background: primary
     search: false
