--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
     
 format:
   html:
-    theme: yeti
+    theme: spacelab
     toc: true
     toc-title: "On this page"
     toc-location: right
